fixing code overflow style

--- a/src/styles/code.css
+++ b/src/styles/code.css
@@ -6,7 +6,7 @@ pre[class*="language-"] {
 }
 
 pre.not-prose {
-  @apply bg-gray-800;
+  @apply bg-gray-800 px-4 py-2 rounded-lg overflow-auto;
 }
 
 /* Properties specific to code blocks */
